syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/v1/d2_result.proto";
import "common/v1/health.proto";

package d2.comms.v1;

option csharp_namespace = "D2.Services.Protos.Comms.V1";

// *********************************
// **** CommsService gRPC API ******
// *********************************

service CommsService {
  // Health check — pings all dependencies (DB, messaging).
  rpc CheckHealth(d2.common.v1.CheckHealthRequest)
      returns (d2.common.v1.CheckHealthResponse);

  // Phase 1: Delivery Engine
  rpc GetChannelPreference(GetChannelPreferenceRequest) returns (GetChannelPreferenceResponse);
  rpc SetChannelPreference(SetChannelPreferenceRequest) returns (SetChannelPreferenceResponse);
  // GetTemplate and UpsertTemplate removed — templates dropped from architecture.
  rpc GetDeliveryStatus(GetDeliveryStatusRequest) returns (GetDeliveryStatusResponse);

  // Phase 2: In-App Notifications (stubs)
  rpc GetNotifications(GetNotificationsRequest) returns (GetNotificationsResponse);
  rpc MarkNotificationsRead(MarkNotificationsReadRequest) returns (MarkNotificationsReadResponse);

  // Phase 3: Conversational Messaging (stubs)
  rpc CreateThread(CreateThreadRequest) returns (CreateThreadResponse);
  rpc GetThread(GetThreadRequest) returns (GetThreadResponse);
  rpc GetThreads(GetThreadsRequest) returns (GetThreadsResponse);
  rpc PostMessage(PostMessageRequest) returns (PostMessageResponse);
  rpc EditMessage(EditMessageRequest) returns (EditMessageResponse);
  rpc DeleteMessage(DeleteMessageRequest) returns (DeleteMessageResponse);
  rpc GetThreadMessages(GetThreadMessagesRequest) returns (GetThreadMessagesResponse);
  rpc AddReaction(AddReactionRequest) returns (AddReactionResponse);
  rpc RemoveReaction(RemoveReactionRequest) returns (RemoveReactionResponse);
  rpc AddParticipant(AddParticipantRequest) returns (AddParticipantResponse);
  rpc RemoveParticipant(RemoveParticipantRequest) returns (RemoveParticipantResponse);
}

// *************************************
// ***** Shared: Pagination ************
// *************************************

message PaginationRequest {
  int32 limit = 1;
  int32 offset = 2;
}

// *************************************
// ***** Shared DTOs *******************
// *************************************

message ChannelPreferenceDTO {
  string id = 1;
  string contact_id = 3;
  bool email_enabled = 4;
  bool sms_enabled = 5;
  reserved 2, 6, 7, 8; // user_id, quiet_hours_start, quiet_hours_end, quiet_hours_tz
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

// TemplateWrapperDTO removed — templates dropped from architecture.
// Message type reserved for backward compatibility.

message DeliveryRequestDTO {
  string id = 1;
  string message_id = 2;
  string correlation_id = 3;
  string recipient_contact_id = 5;
  repeated string channels = 6;
  optional string callback_topic = 8;
  reserved 4, 7; // recipient_user_id, template_name
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp processed_at = 10;
}

message DeliveryAttemptDTO {
  string id = 1;
  string request_id = 2;
  string channel = 3;
  string recipient_address = 4;
  string status = 5;                        // "pending" | "sent" | "failed" | "retried"
  optional string provider_message_id = 6;  // set after successful send
  optional string error = 7;                // set on failure
  int32 attempt_number = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp next_retry_at = 10;
}

message ThreadDTO {
  string id = 1;
  string type = 2;                  // "chat" | "support" | "forum" | "system"
  string state = 3;                 // "active" | "archived" | "closed"
  string title = 4;
  string slug = 5;
  string notification_policy = 6;   // "all_messages" | "mentions_only" | "none"
  string org_id = 7;
  string created_by_user_id = 8;
  google.protobuf.Timestamp created_at = 9;
  google.protobuf.Timestamp updated_at = 10;
}

message MessageDTO {
  string id = 1;
  optional string thread_id = 2;           // null for standalone/transactional messages
  optional string parent_message_id = 3;   // null if top-level
  optional string sender_user_id = 4;
  optional string sender_contact_id = 5;
  optional string sender_service = 6;
  optional string title = 7;
  string content = 8;
  string plain_text_content = 9;
  string content_format = 10;              // "markdown" | "plain" | "html"
  bool sensitive = 11;
  string urgency = 12;                     // "normal" | "important" | "urgent"
  optional string related_entity_id = 13;
  optional string related_entity_type = 14;
  google.protobuf.Timestamp edited_at = 15;
  google.protobuf.Timestamp deleted_at = 16;
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.Timestamp updated_at = 18;
}

message NotificationDTO {
  string id = 1;
  string user_id = 2;
  string title = 3;
  string body = 4;
  optional string related_entity_id = 5;
  optional string related_entity_type = 6;
  bool read = 7;
  google.protobuf.Timestamp created_at = 8;
}

message ReactionDTO {
  string id = 1;
  string message_id = 2;
  string user_id = 3;
  string reaction = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ParticipantDTO {
  string id = 1;
  string thread_id = 2;
  optional string user_id = 3;
  optional string contact_id = 4;
  string role = 5;                  // "observer" | "participant" | "moderator" | "creator"
  bool notifications_muted = 6;
  google.protobuf.Timestamp last_read_at = 7;
  google.protobuf.Timestamp joined_at = 8;
  google.protobuf.Timestamp left_at = 9;
}

// ****************************************
// ***** Phase 1: GetChannelPreference ****
// ****************************************

message GetChannelPreferenceRequest {
  string contact_id = 2;
  reserved 1; // user_id
}

message GetChannelPreferenceResponse {
  d2.common.v1.D2ResultProto result = 1;
  ChannelPreferenceDTO data = 2;
}

// ****************************************
// ***** Phase 1: SetChannelPreference ****
// ****************************************

message SetChannelPreferenceRequest {
  string contact_id = 2;
  bool email_enabled = 3;
  bool sms_enabled = 4;
  reserved 1, 5, 6, 7; // user_id, quiet_hours_start, quiet_hours_end, quiet_hours_tz
}

message SetChannelPreferenceResponse {
  d2.common.v1.D2ResultProto result = 1;
  ChannelPreferenceDTO data = 2;
}

// GetTemplateRequest/Response and UpsertTemplateRequest/Response removed —
// templates dropped from architecture.

// ****************************************
// ***** Phase 1: GetDeliveryStatus *******
// ****************************************

message GetDeliveryStatusRequest {
  string delivery_request_id = 1;
}

message GetDeliveryStatusResponse {
  d2.common.v1.D2ResultProto result = 1;
  DeliveryRequestDTO request = 2;
  repeated DeliveryAttemptDTO attempts = 3;
}

// ****************************************
// ***** Phase 2: GetNotifications ********
// ****************************************

message GetNotificationsRequest {
  string user_id = 1;
  bool unread_only = 2;
  PaginationRequest pagination = 3;
}

message GetNotificationsResponse {
  d2.common.v1.D2ResultProto result = 1;
  repeated NotificationDTO data = 2;
  int32 total = 3;
}

// ********************************************
// ***** Phase 2: MarkNotificationsRead *******
// ********************************************

message MarkNotificationsReadRequest {
  string user_id = 1;
  repeated string notification_ids = 2;
}

message MarkNotificationsReadResponse {
  d2.common.v1.D2ResultProto result = 1;
  int32 marked_count = 2;
}

// ****************************************
// ***** Phase 3: CreateThread ************
// ****************************************

message CreateThreadRequest {
  string type = 1;
  string title = 2;
  string slug = 3;
  string notification_policy = 4;
  string org_id = 5;
  string created_by_user_id = 6;
}

message CreateThreadResponse {
  d2.common.v1.D2ResultProto result = 1;
  ThreadDTO data = 2;
}

// ****************************************
// ***** Phase 3: GetThread ***************
// ****************************************

message GetThreadRequest {
  string thread_id = 1;
}

message GetThreadResponse {
  d2.common.v1.D2ResultProto result = 1;
  ThreadDTO data = 2;
}

// ****************************************
// ***** Phase 3: GetThreads **************
// ****************************************

message GetThreadsRequest {
  string org_id = 1;
  string user_id = 2;
  string type = 3;
  PaginationRequest pagination = 4;
}

message GetThreadsResponse {
  d2.common.v1.D2ResultProto result = 1;
  repeated ThreadDTO data = 2;
  int32 total = 3;
}

// ****************************************
// ***** Phase 3: PostMessage *************
// ****************************************

message PostMessageRequest {
  string thread_id = 1;
  string sender_user_id = 2;
  string content = 3;
  string plain_text_content = 4;
  string content_format = 5;
  optional string parent_message_id = 6;
  optional string title = 7;
}

message PostMessageResponse {
  d2.common.v1.D2ResultProto result = 1;
  MessageDTO data = 2;
}

// ****************************************
// ***** Phase 3: EditMessage *************
// ****************************************

message EditMessageRequest {
  string message_id = 1;
  string sender_user_id = 2;
  string content = 3;
  string plain_text_content = 4;
}

message EditMessageResponse {
  d2.common.v1.D2ResultProto result = 1;
  MessageDTO data = 2;
}

// ****************************************
// ***** Phase 3: DeleteMessage ***********
// ****************************************

message DeleteMessageRequest {
  string message_id = 1;
  string sender_user_id = 2;
}

message DeleteMessageResponse {
  d2.common.v1.D2ResultProto result = 1;
}

// ****************************************
// ***** Phase 3: GetThreadMessages *******
// ****************************************

message GetThreadMessagesRequest {
  string thread_id = 1;
  PaginationRequest pagination = 2;
}

message GetThreadMessagesResponse {
  d2.common.v1.D2ResultProto result = 1;
  repeated MessageDTO data = 2;
  int32 total = 3;
}

// ****************************************
// ***** Phase 3: AddReaction *************
// ****************************************

message AddReactionRequest {
  string message_id = 1;
  string user_id = 2;
  string reaction = 3;
}

message AddReactionResponse {
  d2.common.v1.D2ResultProto result = 1;
  ReactionDTO data = 2;
}

// ****************************************
// ***** Phase 3: RemoveReaction **********
// ****************************************

message RemoveReactionRequest {
  string reaction_id = 1;
  string user_id = 2;
}

message RemoveReactionResponse {
  d2.common.v1.D2ResultProto result = 1;
}

// ****************************************
// ***** Phase 3: AddParticipant **********
// ****************************************

message AddParticipantRequest {
  string thread_id = 1;
  string user_id = 2;
  string contact_id = 3;
  string role = 4;
}

message AddParticipantResponse {
  d2.common.v1.D2ResultProto result = 1;
  ParticipantDTO data = 2;
}

// ****************************************
// ***** Phase 3: RemoveParticipant *******
// ****************************************

message RemoveParticipantRequest {
  string thread_id = 1;
  string participant_id = 2;
}

message RemoveParticipantResponse {
  d2.common.v1.D2ResultProto result = 1;
}
